[MODIFY] 테스트 컨테이너 연결 및 환경 수정